--- a/package.json
+++ b/package.json
@@ -29,27 +29,32 @@
     ]
   },
   "dependencies": {
-    "prisma": "~2.17",
     "@prisma/client": "~2.17",
     "blitz": "0.33.0",
+    "date-fns": "2.19.0",
+    "date-fns-tz": "1.1.3",
+    "final-form": "4.20.2",
+    "prisma": "~2.17",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "3.1.1",
+    "react-final-form": "6.5.3",
+    "tailwindcss": "2",
     "typescript": "~4.1",
-    "zod": "1.11.12",
-    "final-form": "4.20.2",
-    "react-final-form": "6.5.3"
+    "zod": "1.11.12"
   },
   "devDependencies": {
-    "@types/react": "17.0.3",
     "@types/preview-email": "2.0.0",
+    "@types/react": "17.0.3",
+    "autoprefixer": "10",
     "eslint": "7.22.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
+    "postcss": "8",
     "prettier": "2.2.1",
+    "prettier-plugin-prisma": "0.6.0",
     "pretty-quick": "3.1.0",
-    "preview-email": "3.0.3",
-    "prettier-plugin-prisma": "0.6.0"
+    "preview-email": "3.0.3"
   },
   "private": true
 }
