--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 # This env file should be checked into source control
 # This is the place for default values for all environments
 # Values in `.env.local` and `.env.production` will override these values
-DATABASE_URL="file:./db.sqlite"
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=blitz-event-app-db
+DATABASE_URL=postgresql://user:password@localhost:5432/blitz-event-app-db
