--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,4 @@
-DATABASE_URL="file:./db.sqlite"
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=blitz-event-app-db
+DATABASE_URL=postgresql://user:password@localhost:5432/blitz-event-app-db
